--- a/spring-boot-shiro/pom.xml
+++ b/spring-boot-shiro/pom.xml
@@ -49,8 +49,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.shiro</groupId>
-			<artifactId>shiro-spring-boot-starter</artifactId>
-			<version>1.5.3</version>
+			<artifactId>shiro-spring</artifactId>
+			<version>1.4.1</version>
 		</dependency>
 	</dependencies>
 
