--- a/spring-boot-redis/pom.xml
+++ b/spring-boot-redis/pom.xml
@@ -3,19 +3,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.1</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<artifactId>my-spring-boot</artifactId>
+		<groupId>com.example</groupId>
+		<version>2021</version>
 	</parent>
-	<groupId>com.example</groupId>
 	<artifactId>spring-boot-redis</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>spring-boot-redis</name>
-	<description>Demo project for Spring Boot</description>
-	<properties>
-		<java.version>1.8</java.version>
-	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
