--- a/spring-boot-easypoi/src/main/resources/application.properties
+++ b/spring-boot-easypoi/src/main/resources/application.properties
@@ -2,3 +2,4 @@
 spring.activemq.broker-url=tcp://127.0.0.1:61616
 spring.activemq.user=admin
 spring.activemq.password=admin
+#spring.main.allow-bean-definition-overriding=true
