--- a/spring-boot-vue/src/main/resources/application.properties
+++ b/spring-boot-vue/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #MySQL
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/spring_boot_shiro
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/spring_boot_vue
 spring.datasource.username=root
 spring.datasource.password=666666
 
