--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
 	<packaging>pom</packaging>
 	<properties>
 		<java.version>1.8</java.version>
+		<pagehelper.version>1.4.1</pagehelper.version>
+		<mybatis.version>2.2.0</mybatis.version>
 	</properties>
 	<modules>
 		<module>spring-boot-activemq</module>
@@ -25,4 +27,21 @@
 		<module>spring-boot-mvc</module>
         <module>spring-boot-vue</module>
     </modules>
+
+	<dependencyManagement>
+		<dependencies>
+			<!--MyBatis-->
+			<dependency>
+				<groupId>org.mybatis.spring.boot</groupId>
+				<artifactId>mybatis-spring-boot-starter</artifactId>
+				<version>${mybatis.version}</version>
+			</dependency>
+			<!--分页工具-->
+			<dependency>
+				<groupId>com.github.pagehelper</groupId>
+				<artifactId>pagehelper-spring-boot-starter</artifactId>
+				<version>${pagehelper.version}</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 </project>
