--- a/spring-boot-vue/pom.xml
+++ b/spring-boot-vue/pom.xml
@@ -21,11 +21,9 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <!--MyBatis-->
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>2.2.0</version>
         </dependency>
 
         <!--MySQL-->
@@ -33,6 +31,11 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
         </dependency>
 
         <dependency>
