--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 		<java.version>1.8</java.version>
 		<pagehelper.version>1.4.1</pagehelper.version>
 		<mybatis.version>2.2.0</mybatis.version>
+		<hutool.version>5.7.18</hutool.version>
 	</properties>
 	<modules>
 		<module>spring-boot-activemq</module>
@@ -41,6 +42,12 @@
 				<groupId>com.github.pagehelper</groupId>
 				<artifactId>pagehelper-spring-boot-starter</artifactId>
 				<version>${pagehelper.version}</version>
+			</dependency>
+			<!--java工具类-->
+			<dependency>
+				<groupId>cn.hutool</groupId>
+				<artifactId>hutool-all</artifactId>
+				<version>${hutool.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
