--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
 		<module>spring-boot-hutool</module>
 		<module>spring-boot-mvc</module>
         <module>spring-boot-vue</module>
+        <module>java-util</module>
     </modules>
 
 	<dependencyManagement>
