--- a/java-util/pom.xml
+++ b/java-util/pom.xml
@@ -22,6 +22,16 @@
             <artifactId>commons-configuration2</artifactId>
             <version>2.7</version>
         </dependency>
+        <dependency>
+            <groupId>commons-dbutils</groupId>
+            <artifactId>commons-dbutils</artifactId>
+            <version>1.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-dbcp2</artifactId>
+            <version>2.9.0</version>
+        </dependency>
     </dependencies>
 
 </project>
