--- a/java-util/pom.xml
+++ b/java-util/pom.xml
@@ -37,6 +37,12 @@
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <!--解析markdown工具包-->
+        <dependency>
+            <groupId>com.youbenzi</groupId>
+            <artifactId>MDTool</artifactId>
+            <version>1.2.4</version>
+        </dependency>
     </dependencies>
 
 </project>
